Added custom cursor

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <div class="page-spinner"></div><span>Loading...</span>
         </div>
     </div>
+    <div id="custom-cursor"></div>
     <main class="page-wrapper">
         <header class="header navbar navbar-expand-lg position-absolute navbar-sticky">
             <div class="container px-3">
